# Axio-demo

./: .gitignore  README.md  chat.html  comparison.html  docker-compose.yml  index.html  judge.html  package-lock.json  package.json  rooms.html  server.js
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: case.py  challenge.py  document.py  transcript.py
backend/app/routers/: challenge.py  evidence.py  intake.py  session.py  zoom.py
backend/app/services/: document.py  llm.py  rag.py  reranker.py  transcript.py  zoom.py
backend/app/storage/: database.py  vector.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/[sessionId]/: page.tsx
frontend/src/app/intake/: page.tsx
frontend/src/app/session/: page.tsx
frontend/src/lib/: api.ts
